Add ETR difficult, change record type to "Not show skill", and more.